target_os = "android"      # These lines need to be changed manually
target_cpu = "x86"
is_debug = false
v8_enable_i18n_support= false
v8_target_cpu = "x86"
is_component_build = true
use_goma = false
v8_use_snapshot = true
v8_use_external_startup_data = false
v8_static_library = false
strip_absolute_paths_from_debug_symbols = true
strip_debug_info = true 
symbol_level=0


